--- a/AgentFrameworkSkills.Sample/AgentFrameworkSkills.Sample.csproj
+++ b/AgentFrameworkSkills.Sample/AgentFrameworkSkills.Sample.csproj
@@ -7,4 +7,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AgentFrameworkSkills\AgentFrameworkSkills.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Agents.AI" Version="1.0.0-preview.260128.1" />
+        <PackageReference Include="OllamaSharp" Version="5.4.11" />
+    </ItemGroup>
+
 </Project>
