--- a/AgentFrameworkSkills.Sample/AgentFrameworkSkills.Sample.csproj
+++ b/AgentFrameworkSkills.Sample/AgentFrameworkSkills.Sample.csproj
@@ -16,4 +16,10 @@
         <PackageReference Include="OllamaSharp" Version="5.4.11" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="TestData\**\*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
