--- a/Samples/AgentFrameworkSkills.Sample.HelloWorld/AgentFrameworkSkills.Sample.HelloWorld.csproj
+++ b/Samples/AgentFrameworkSkills.Sample.HelloWorld/AgentFrameworkSkills.Sample.HelloWorld.csproj
@@ -5,7 +5,12 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>AgentFrameworkSkills.Sample</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\AgentFrameworkSkills\AgentFrameworkSkills.csproj" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Agents.AI" Version="1.0.0-preview.260205.1" />
@@ -16,10 +21,6 @@
         <Content Include="Skills\**\*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\AgentFrameworkSkills\AgentFrameworkSkills.csproj" />
     </ItemGroup>
 
 </Project>
